--- a/myproject/templates/dpo/documents/documents.html
+++ b/myproject/templates/dpo/documents/documents.html
@@ -38,11 +38,11 @@
             <div class="card p-3 rounded-3">
                 <h5 class="card-title text-center pb-2"><i class="bi bi-file-earmark-text"></i> Приказы</h5>
                 <div class="row g-2">
-                    <div class="col-md-4"><a href="{% url "enroll_order" %}" class="btn btn-primary w-100"><i class="bi bi-person-check"></i> На зачисление</a></div>
-                    <div class="col-md-4"><button class="btn btn-primary w-100"><i class="bi bi-person-x"></i> На отчисление</button></div>
-                    <div class="col-md-4"><button class="btn btn-primary w-100"><i class="bi bi-person-dash"></i> На отчисление (по завершению)</button></div>
-                    <div class="col-md-6"><button class="btn btn-primary w-100"><i class="bi bi-people"></i> О назначении аттестационной комиссии</button></div>
-                    <div class="col-md-6"><button class="btn btn-primary w-100"><i class="bi bi-award"></i> О допуске к итоговой аттестации</button></div>
+                    <div class="col-md-4"><a href="" class="btn btn-primary w-100"><i class="bi bi-person-check"></i> На зачисление</a></div>
+                    <div class="col-md-4"><a href="" class="btn btn-primary w-100"><i class="bi bi-person-x"></i> На отчисление слушателя</a></div>
+                    <div class="col-md-4"><a href="" class="btn btn-primary w-100"><i class="bi bi-person-dash"></i> На отчисление группы</a></div>
+                    <div class="col-md-6"><a href="" class="btn btn-primary w-100"><i class="bi bi-people"></i> О назначении аттестационной комиссии</a></div>
+                    <div class="col-md-6"><a href="" class="btn btn-primary w-100"><i class="bi bi-award"></i> О допуске к итоговой аттестации</a></div>
                 </div>
             </div>
         </div>
@@ -54,8 +54,8 @@
             <div class="card p-3 rounded-3">
                 <h5 class="card-title text-center pb-2"><i class="bi bi-journal-text"></i> Экзаменационные документы</h5>
                 <div class="row g-2">
-                    <div class="col-md-6"><button class="btn btn-success w-100"><i class="bi bi-pencil-square"></i> Протокол экзамена</button></div>
-                    <div class="col-md-6"><button class="btn btn-success w-100"><i class="bi bi-list-check"></i> Итоговая аттестационная ведомость</button></div>
+                    <div class="col-md-6"><a href="" class="btn btn-success w-100"><i class="bi bi-pencil-square"></i> Протокол экзамена</a></div>
+                    <div class="col-md-6"><a href="" class="btn btn-success w-100"><i class="bi bi-list-check"></i> Итоговая аттестационная ведомость</a></div>
                 </div>
             </div>
         </div>
@@ -66,7 +66,7 @@
         <div class="col-12">
             <div class="card p-3 rounded-3">
                 <h5 class="card-title text-center pb-2"><i class="bi bi-book"></i> Журнал занятий</h5>
-                <button class="btn btn-warning w-100"><i class="bi bi-journal-bookmark"></i> Журнал занятий</button>
+                <a href="" class="btn btn-warning w-100"><i class="bi bi-journal-bookmark"></i> Журнал занятий</a>
             </div>
         </div>
     </div>
