--- a/myproject/templates/dpo/groups/group_detail.html
+++ b/myproject/templates/dpo/groups/group_detail.html
@@ -3,12 +3,22 @@
 {% block title %}Группа{% endblock title %}
 
 {% block style %}
+<style>
+    .btn-primary {
+        background: #9999FF;
+        border: #9999FF;
+    }
 
+    .btn-primary:hover {
+        background:rgb(128, 128, 249);
+        border: rgb(128, 128, 249);
+    }
+</style>
 {% endblock style %}
 
 {% block content %}
 <div class="container mt-5">
-    <div class="card shadow">
+    <div class="card shadow mb-3">
         <div class="card-header text-white" style="background: #9999FF">
             <h3 class="mb-0 text-center">Группа: {{group.name}}</h3>
         </div>
@@ -18,6 +28,47 @@
             <p><strong>Дата окончания:</strong> {{group.finish_date}}</p>
             <p><strong>Преподаватель:</strong> {{group.teacher.surname}} {{group.teacher.name}} {{group.teacher.patronymic}}</p>
             <p><strong>Количество слушателей:</strong> <span id="total-students">{{student_count}}</span></p>
+
+            <div class="d-flex flex-wrap gap-2">
+                <a href="{% url "enroll_order" group.id %}" class="btn btn-primary">Приказ о зачислении</a>
+                <a href="{% url "commission_order" group.id %}" class="btn btn-primary">Приказ о назначении комиссии</a>
+                <a href="" class="btn btn-primary">Протокол экзамена</a>
+                <a href="" class="btn btn-primary">Аттестационная ведомость</a>
+                <a href="" class="btn btn-primary">Журнал занятий</a>
+                <a href="" class="btn btn-primary">Приказ о завершении обучения</a>
+            </div>
+
+            <h4 class="mt-4">Аттестационная комиссия</h4>
+            {% if not group_commission %}
+                <a href="{% url "commission_group_add" group.id %}" class="btn btn-success">Добавить комиссию</a>
+            {% else %}
+            <div class="">
+                {% for commission in group_commission %}
+                    {% if commission.role == "Председатель комиссии" %}
+                        <p><strong>Председатель комиссии:</strong> {{commission.commission_member.surname}} {{commission.commission_member.name}}
+                             {{commission.commission_member.patronymic}} - {{commission.commission_member.position}}</p>
+                    {% endif %}
+                {% endfor %}
+                {% for commission in group_commission %}
+                    {% if commission.role == "Заместитель председателя комиссии" %}
+                        <p><strong>Заместитель председателя комиссии:</strong> {{commission.commission_member.surname}} {{commission.commission_member.name}}
+                            {{commission.commission_member.patronymic}} - {{commission.commission_member.position}}</p>
+                    {% endif %}
+                {% endfor %}
+                {% for commission in group_commission %}
+                    {% if commission.role == "Секретарь" %}
+                        <p><strong>Секретарь:</strong> {{commission.commission_member.surname}} {{commission.commission_member.name}}
+                            {{commission.commission_member.patronymic}} - {{commission.commission_member.position}}</p>
+                    {% endif %}
+                {% endfor %}
+                {% for commission in group_commission %}
+                    {% if commission.role == "Член комиссии" %}
+                        <p><strong>Член комиссии:</strong> {{commission.commission_member.surname}} {{commission.commission_member.name}}
+                            {{commission.commission_member.patronymic}} - {{commission.commission_member.position}}</p>
+                    {% endif %}
+                {% endfor %}
+            </div>
+            {% endif %}
             
             <h4 class="mt-4">Список слушателей</h4>
             <table class="table table-bordered mt-2">
@@ -53,7 +104,9 @@
                 {% csrf_token %}
                 <input type="hidden" name="student_ids" id="student-ids">
                 <!-- Кнопка завершения курса -->
-                <button type="submit" id="remove-all" class="btn btn-warning mt-3">Завершить курс</button>
+                 <div class="text-center">
+                    <button type="submit" id="remove-all" class="btn btn-warning mt-3">Завершить обучение</button>
+                </div>
             </form>
             
             
