--- a/myproject/templates/student/new_statement.html
+++ b/myproject/templates/student/new_statement.html
@@ -110,7 +110,8 @@
                                             <div>
                                                 <h5 class="card-title">${course.course_name}</h5>
                                                 <p><strong>Тип:</strong> ${course.course_type}</p>
-                                                <p><strong>Стоимость:</strong> ${course.price} руб.</p>
+                                                <p><strong>Стоимость (бюджет):</strong> ${course.price_b} руб.</p>
+                                                <p><strong>Стоимость (внебюджет):</strong> ${course.price_vb} руб.</p>
                                                 <p><strong>Количество часов:</strong> ${course.hours_count} ч.</p>
                                             </div>
                                             <div class="mt-auto">
