--- a/myproject/templates/dpo/courses/courses.html
+++ b/myproject/templates/dpo/courses/courses.html
@@ -87,7 +87,8 @@
                         <div>
                             <h5 class="card-title">{{ course.course_name }}</h5>
                             <p><strong>Тип:</strong> {{ course.course_type}}</p>
-                            <p><strong>Стоимость:</strong> {{ course.price|floatformat:2|default:"0.00" }} руб.</p>
+                            <p><strong>Стоимость (бюджет):</strong> {{ course.price_b|floatformat:2|default:"0.00" }} руб.</p>
+                            <p><strong>Стоимость (внебюджет):</strong> {{ course.price_vb|floatformat:2|default:"0.00" }} руб.</p>
                             <p><strong>Количество часов:</strong> {{ course.hours_count}} ч.</p>
                         </div>
                         <div class="mt-auto">
