--- a/myproject/templates/dpo/students/students.html
+++ b/myproject/templates/dpo/students/students.html
@@ -1,7 +1,7 @@
 {% extends "manager_navigation.html" %}
 {% load static %}
 
-{% block title %}Студенты{% endblock title %}
+{% block title %}Слушатели{% endblock title %}
 
 {% block content %}
 <div class="container">
