--- a/myproject/templates/dpo/statements.html
+++ b/myproject/templates/dpo/statements.html
@@ -83,51 +83,71 @@
                         <h4>👨‍🎓 <strong>{{ statement.student.surname }} {{ statement.student.name }} {{ statement.student.patronymic }}</strong></h4>
                         <p><strong>📝 Тип заявления:</strong> {{ statement.statement_type }}</p>
                         <p><strong>📅 Дата подачи:</strong> {{ statement.submitting_date }}</p>
-                        <p><strong>🎓 Курс:</strong> {{ statement.course.course_name }}</p>
                         <p><strong>Статус:</strong> {{ statement.status }}</p>
-                        {% if statement.status == "Одобрено" %}
+                        {% if statement.status == "Одобрено" and statement.statement_type == "зачисление" %}
                         <p><strong>Группа:</strong> {{ statement.group.name }}</p>
                         {% endif %}
                         {% if statement.status == "На рассмотрении" %}
-                        <form action="{% url "statements" %}" method="POST">
-                            {% csrf_token %}
-                            <label for="groups"><strong>Группа:</strong></label>
-                            <select name="selected_group" id="groups">
-                                {% with found_suitable_group=False %}
-                                    {% for group in groups %}
-                                        {% if group.finish_date|date:"Y-m-d" > today|date:"Y-m-d" and group.course.id == statement.course.id %}
-                                            <option value="{{ group.id }}">{{ group.name }}</option>
-                                            {% with found_suitable_group=True %}
-                                            {% endwith %}
-                                        {% endif %}
-                                    {% endfor %}
-                                {% endwith %}
-                            </select>
-                            {% if found_suitable_group == False %}
-                            <p>Нет подходящих групп</p>
-                            {% endif %}
+                            {% if statement.statement_type == "отчисление" %}
+                                <form action="{% url "statements" %}" method="POST">
+                                    {% csrf_token %}              
+                                    <!-- Кнопки -->
+                                    <div class="mt-3 d-flex justify-content-center">
+                                        <input type="hidden" name="statement_id" value="{{statement.id}}">
+                                        <input type="hidden" name="action_type" value="submit">
+                                        <button class="btn btn-accept w-100 me-2" type="submit">Одобрить</button>
+                                    </div>
+                                </form>
+                                    
+                                <form action="{% url "statements" %}" method="POST">
+                                    {% csrf_token %}
+                                    <div class="mt-2 d-flex justify-content-center">
+                                        <input type="hidden" name="action_type" value="recall">
+                                        <input type="hidden" name="statement_id" value="{{statement.id}}">
+                                        <button class="btn btn-reject w-100 me-2 " type="submit">Отклонить</button>
+                                    </div>
+                                </form>
+                            {% else %}
+                                <form action="{% url "statements" %}" method="POST">
+                                    {% csrf_token %}
+                                    <label for="groups"><strong>Группа:</strong></label>
+                                    <select name="selected_group" id="groups">
+                                        {% with found_suitable_group=False %}
+                                            {% for group in groups %}
+                                                {% if group.finish_date|date:"Y-m-d" > today|date:"Y-m-d" and group.course.id == statement.course.id %}
+                                                    <option value="{{ group.id }}">{{ group.name }}</option>
+                                                    {% with found_suitable_group=True %}
+                                                    {% endwith %}
+                                                {% endif %}
+                                            {% endfor %}
+                                        {% endwith %}
+                                    </select>
+                                    {% if found_suitable_group == False %}
+                                    <p>Нет подходящих групп</p>
+                                    {% endif %}
 
-                            <select name="ed_kind" id="ed_kind">
-                                <option value="Бюджет">Бюджет</option>
-                                <option value="Внебюджет">Внебюджет</option>
-                            </select>
-        
-                            <!-- Кнопки -->
-                            <div class="mt-3 d-flex justify-content-center">
-                                <input type="hidden" name="statement_id" value="{{statement.id}}">
-                                <input type="hidden" name="action_type" value="submit">
-                                <button class="btn btn-accept w-100 me-2" type="submit">Зачислить</button>
-                            </div>
-                        </form>
-                            
-                        <form action="{% url "statements" %}">
-                            {% csrf_token %}
-                            <div class="mt-2 d-flex justify-content-center">
-                                <input type="hidden" name="action_type" value="recall">
-                                <input type="hidden" name="statement_id" value="{{statement.id}}">
-                                <button class="btn btn-reject w-100 me-2 " type="submit">Отклонить</button>
-                            </div>
-                        </form>
+                                    <select name="ed_kind" id="ed_kind">
+                                        <option value="Бюджет">Бюджет</option>
+                                        <option value="Внебюджет">Внебюджет</option>
+                                    </select>
+                
+                                    <!-- Кнопки -->
+                                    <div class="mt-3 d-flex justify-content-center">
+                                        <input type="hidden" name="statement_id" value="{{statement.id}}">
+                                        <input type="hidden" name="action_type" value="submit">
+                                        <button class="btn btn-accept w-100 me-2" type="submit">Зачислить</button>
+                                    </div>
+                                </form>
+                                    
+                                <form action="{% url "statements" %}" method="POST">
+                                    {% csrf_token %}
+                                    <div class="mt-2 d-flex justify-content-center">
+                                        <input type="hidden" name="action_type" value="recall">
+                                        <input type="hidden" name="statement_id" value="{{statement.id}}">
+                                        <button class="btn btn-reject w-100 me-2 " type="submit">Отклонить</button>
+                                    </div>
+                                </form>
+                            {% endif %}
                         {% endif %}
                     </div>
                     {% endfor %}
